# monk3

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKFILE.md  Taskfile.yml  aggregation-plan.md  build.gradle.kts  copy-default.sh  docker-compose.yml  gradle.properties  i-have-pasted-an-rippling-moonbeam.md  mappings.schema.json  migrate_mapping.py  plan.md  query-routing-predicate-exploration.md  query.json  review.md  search-query-dsl.schema.json  settings.gradle.kts  x.txt
.codegraph/: daemon.pid
catalog/: build.gradle  build.gradle.kts
config/: backends-docker.json  backends-etcd.json  backends-nomad.json  backends.json  catalog-docker.json  catalog-etcd.json  catalog-nomad.json  catalog.json
config/mappings/: article.mapping.json  book.mapping.json  book.virtual.json  dataset.mapping.json  document.mapping.json  mappings.schema.json  migrated.mapping.json  migrated.virtual.json  sample.mapping.json  virtual-mapping.schema.json
config/migrator/: migrate_mapping.py
docker/: docker-compose.yml  helper.Dockerfile
gradle/: libs.versions.toml
monk/: build.gradle.kts
monk3/: Dockerfile  build.gradle  build.gradle.kts
nomad/: .gitignore  CLAUDE.md  README.md  TASKFILE.md  Taskfile.yml  build.gradle  build.gradle.kts  docker-compose.yml
nomad/document-sync/: Dockerfile  pyproject.toml  sync.py
prompts/: capsules.md  nested-objects.md  nested-paths-migrate.md  query-agg-type.md
scripts/: copy-default.sh  offline-deps.sh  offline.init.gradle.kts
scripts/airgap/: offline-deps.py  offline_deps.py  pyproject.toml
(+352 files in other folders)
