[project]
name = "airgap"
version = "0.1.0"
description = "Build, ship, and upload an offline Gradle dependency bundle for monk (air-gapped installs)."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
airgap = "offline_deps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["offline_deps.py"]
